--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -1,4 +1,4 @@
-$blue: #228be6; //변수 선언
+$blue: #228be6; //스타일 파일에서 사용 할 수 있는 변수를 선언
 
 .Button {
   display: inline-flex;
@@ -9,10 +9,27 @@ $blue: #228be6; //변수 선언
   border: none;
   cursor: pointer;
 
-  height: 2.25rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 1rem;
+  // 사이즈 관리
+  &.large {
+    height: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 1.25rem;
+  }
+
+  &.medium {
+    height: 2.25rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 1rem;
+  }
+
+  &.small {
+    height: 1.75rem;
+    padding-left: 0.875rem;
+    padding-right: 1rem;
+    font-size: 1rem;
+  }
 
   background: $blue;
   &:hover {
@@ -21,5 +38,10 @@ $blue: #228be6; //변수 선언
 
   &:active {
     background: darken($blue, 10%);
+  }
+
+  //.Button + .Button
+  & + & {
+    margin-left: 1rem;
   }
 }
