--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -13,6 +13,16 @@ $pink: #f06595;
   &:active {
     background: darken($color, 10%);
   }
+
+  &.outline {
+    color: $color;
+    background: none;
+    border: 1px solid $color;
+    &:hover {
+      background: $color;
+      color: white;
+    }
+  }
 }
 
 .Button {
